crates/keron-lang/tests/corpus/errors/parse/chain_outside_reconcile.keron
val a: Symlink = symlink(from = "from-a", to = "to-a")
val b: Symlink = symlink(from = "from-b", to = "to-b")
val c = a ~> b
